feat: add docs and rewrite functions
