# SupplyInventory/Application/Controllers/PalletRackController.go
@@ -3,16 +3,11 @@ package controllers
 import (
 	"net/http"
 
+	requests "go_inventory/SupplyInventory/Application/Requests"
 	services "go_inventory/SupplyInventory/Application/Services"
 
 	"github.com/gin-gonic/gin"
 )
-
-type PalletRackRequest struct {
-	PalletRack struct {
-		Name string `json:"name"`
-	} `json:"palletRack"`
-}
 
 type PalletRackController struct {
 	palletRackService services.PalletRackService
@@ -31,17 +26,17 @@ func (controller *PalletRackController) RegisterPalletRack(group *gin.RouterGrou
 // @Tags Pallet Racks
 // @Accept json
 // @Produce json
-// @Param PalletRack body PalletRackRequest true "Palletized Product"
+// @Param PalletRack body requests.PalletRackRequest true "Palletized Product"
 // @Success 200 {object} domain.PalletRackEntity
 // @Failure 422 {object} map[string]string
 // @Router /api/v1/racks [post]
 func (controller *PalletRackController) createPalletRack(c *gin.Context) {
-	var req PalletRackRequest
+	var req requests.PalletRackRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
 	}
 
-	newPalletRack, err := controller.palletRackService.Create(req.PalletRack.Name)
+	newPalletRack, err := controller.palletRackService.Create(req.Name)
 
 	if newPalletRack == nil {
 		c.JSON(http.StatusUnprocessableEntity, gin.H{"message": err.Error()})
@@ -51,11 +46,18 @@ func (controller *PalletRackController) createPalletRack(c *gin.Context) {
 	c.JSON(http.StatusCreated, newPalletRack)
 }
 
+// @Summary List Pallet Racks
+// @Tags Pallet Racks
+// @Accept json
+// @Produce json
+// @Param PalletRack body requests.PalletRackRequest true "Palletized Product"
+// @Success 200 {object} domain.PalletRackEntity
+// @Failure 404 {object} map[string]string
+// @Router /api/v1/racks [get]
 func (controller *PalletRackController) listRacks(c *gin.Context) {
 	racks, err := controller.palletRackService.ListRacks()
-
-	if racks == nil {
-		c.JSON(http.StatusUnprocessableEntity, gin.H{"message": err.Error()})
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{})
 		return
 	}
 
