# SupplyInventory/Application/Requests/PalletRackRequest.go
@@ -1,0 +1,5 @@
+package requests
+
+type PalletRackRequest struct {
+	Name string `json:"name" binding:"required"`
+}
