# SupplyInventory/Application/Requests/PalletRequest.go
@@ -1,0 +1,6 @@
+package requests
+
+type PalletRequest struct {
+	Name         string `json:"name" binding:"required"`
+	PalletRackID uint   `json:"palletRackId" binding:"required"`
+}
