# docs/swagger.yaml
@@ -1,19 +1,4 @@
 definitions:
-  controllers.PalletRackRequest:
-    properties:
-      palletRack:
-        properties:
-          name:
-            type: string
-        type: object
-    type: object
-  controllers.PalletizedProductRequest:
-    properties:
-      PalletizedProduct:
-        $ref: '#/definitions/domain.PalletizedProductEntity'
-    required:
-    - PalletizedProduct
-    type: object
   domain.PalletEntity:
     properties:
       id:
@@ -61,6 +46,36 @@ definitions:
     - ean
     - quantity
     type: object
+  requests.PalletRackRequest:
+    properties:
+      name:
+        type: string
+    required:
+    - name
+    type: object
+  requests.PalletRequest:
+    properties:
+      name:
+        type: string
+      palletRackId:
+        type: integer
+    required:
+    - name
+    - palletRackId
+    type: object
+  requests.PalletizedProductRequest:
+    properties:
+      ean:
+        type: integer
+      palletId:
+        type: integer
+      quantity:
+        type: integer
+    required:
+    - ean
+    - palletId
+    - quantity
+    type: object
 host: localhost:3000
 info:
   contact:
@@ -70,17 +85,22 @@ info:
   title: Go Inventory API
   version: "1.0"
 paths:
-  /api/v1/pallet/products:
+  /api/v1/pallet/products/{palletId}:
     patch:
       consumes:
       - application/json
       parameters:
+      - description: ID do pallet
+        in: path
+        name: palletId
+        required: true
+        type: integer
       - description: Palletized Product
         in: body
         name: pallet
         required: true
         schema:
-          $ref: '#/definitions/controllers.PalletizedProductRequest'
+          $ref: '#/definitions/requests.PalletizedProductRequest'
       produces:
       - application/json
       responses:
@@ -94,10 +114,102 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: tres product to
+      summary: Add a product to a pallet
       tags:
       - Palletized products
+  /api/v1/pallets:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.PalletEntity'
+            type: array
+        "404":
+          description: Not Found
+      summary: List pallets
+      tags:
+      - Pallets
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Palletized Product
+        in: body
+        name: pallet
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PalletRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.PalletEntity'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create Pallet
+      tags:
+      - Pallets
+  /api/v1/pallets/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID do pallet
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.PalletEntity'
+        "404":
+          description: Not Found
+      summary: Get pallet by ID
+      tags:
+      - Pallets
   /api/v1/racks:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Palletized Product
+        in: body
+        name: PalletRack
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PalletRackRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.PalletRackEntity'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: List Pallet Racks
+      tags:
+      - Pallet Racks
     post:
       consumes:
       - application/json
@@ -107,7 +219,7 @@ paths:
         name: PalletRack
         required: true
         schema:
-          $ref: '#/definitions/controllers.PalletRackRequest'
+          $ref: '#/definitions/requests.PalletRackRequest'
       produces:
       - application/json
       responses:
